force-app/main/default/objects/JotForm_Log__c/JotForm_Log__c.object-meta.xml
<CustomObject>
    <label>JotForm Log</label>
    <nameField>
        <displayFormat>JF-{0}</displayFormat>
        <label>JotFormLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JotForm Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>