force-app/main/default/objects/JotForm_Log__c/fields/Exception_Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>Exception_Stacktrace__c</fullName>
    <label>Exception Stacktrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>